--- a/notebooks/07-MatrixFactorization/SVDTuning.ipynb
+++ b/notebooks/07-MatrixFactorization/SVDTuning.ipynb
@@ -32,7 +32,6 @@
         "\n",
         "import random\n",
         "import numpy as np\n",
-        "import pandas as pd\n",
         "\n",
         "np.random.seed(0)\n",
         "random.seed(0)"
@@ -132,24 +131,6 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Evaluate Algorithms\n",
-        "\n",
-        "Run the evaluation to compare the performance of all algorithms."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "algorithms, metrics, values = evaluator.evaluate(top_n_metrics=True)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
         "### Evaluation results"
       ]
     },
@@ -159,10 +140,9 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "results_df = pd.DataFrame(\n",
-        "    values, columns=metrics, index=pd.Index(algorithms, name=\"Algorithm\")\n",
-        ")\n",
-        "results_df\n"
+        "results = evaluator.evaluate(top_n_metrics=True)\n",
+        "\n",
+        "results.to_df()"
       ]
     },
     {
@@ -181,7 +161,12 @@
       "outputs": [],
       "source": [
         "samples = evaluator.sample_top_n_recs(uid=85)\n",
-        "samples"
+        "\n",
+        "for algorithm, recs in samples.items():\n",
+        "    print(f\"{algorithm}\")\n",
+        "    movie_names = lens.get_movie_names(recs)\n",
+        "    for movie_name in movie_names:\n",
+        "        print(f\"  {movie_name}\")"
       ]
     }
   ],
