--- a/notebooks/09-DeepLearning/AutoRecBakeOff.ipynb
+++ b/notebooks/09-DeepLearning/AutoRecBakeOff.ipynb
@@ -114,26 +114,9 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "algorithms, metrics, values = evaluator.evaluate(True, minimum_rating=0.0)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "### Evaluation results"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "results_df = pd.DataFrame(\n",
-        "    values, columns=metrics, index=pd.Index(algorithms, name=\"Algorithm\")\n",
-        ")\n",
-        "results_df"
+        "results = evaluator.evaluate(top_n_metrics=True, minimum_rating=0.0)\n",
+        "\n",
+        "results.to_df()"
       ]
     },
     {
@@ -152,7 +135,12 @@
       "outputs": [],
       "source": [
         "samples = evaluator.sample_top_n_recs(uid=85)\n",
-        "samples"
+        "\n",
+        "for algorithm, recs in samples.items():\n",
+        "    print(f\"{algorithm}\")\n",
+        "    movie_names = lens.get_movie_names(recs)\n",
+        "    for movie_name in movie_names:\n",
+        "        print(f\"  {movie_name}\")"
       ]
     }
   ],
