--- a/notebooks/11-Challenges/RBMBakeOff.ipynb
+++ b/notebooks/11-Challenges/RBMBakeOff.ipynb
@@ -103,24 +103,6 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Evaluate Algorithms\n",
-        "\n",
-        "Run the evaluation to compare the performance of the algorithms. This will help us understand how well the RBM performs compared to random recommendations."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 5,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "algorithms, metrics, values = evaluator.evaluate(top_n_metrics=False)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
         "### Evaluation results"
       ]
     },
@@ -130,19 +112,20 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "results_df = pd.DataFrame(\n",
-        "    values, columns=metrics, index=pd.Index(algorithms, name=\"Algorithm\")\n",
-        ")\n",
-        "results_df"
+        "results = evaluator.evaluate(top_n_metrics=True)\n",
+        "\n",
+        "results.to_df()"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Sample Recommendations (Optional)\n",
+        "### Sample Recommendations\n",
         "\n",
-        "The following cell is commented out in the original script, but you can uncomment it to generate and display sample recommendations using the evaluated algorithms. This can help qualitatively assess the differences between RBM and random recommendations."
+        "Generate and display some sample recommendations using the evaluated algorithms. \n",
+        "\n",
+        "This will help us qualitatively assess the differences between tuned and untuned RBM recommendations."
       ]
     },
     {
@@ -152,7 +135,12 @@
       "outputs": [],
       "source": [
         "samples = evaluator.sample_top_n_recs(uid=85)\n",
-        "samples"
+        "\n",
+        "for algorithm, recs in samples.items():\n",
+        "    print(f\"{algorithm}\")\n",
+        "    movie_names = lens.get_movie_names(recs)\n",
+        "    for movie_name in movie_names:\n",
+        "        print(f\"  {movie_name}\")"
       ]
     }
   ],
