--- a/notebooks/09-DeepLearning/RBMBakeOff.ipynb
+++ b/notebooks/09-DeepLearning/RBMBakeOff.ipynb
@@ -99,24 +99,6 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Evaluate Algorithms\n",
-        "\n",
-        "Run the evaluation to compare the performance of all algorithms. The evaluation will include various metrics such as RMSE, MAE, and hit rate."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 5,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "algorithms, metrics, values = evaluator.evaluate(top_n_metrics=True)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
         "### Evaluation results"
       ]
     },
@@ -126,10 +108,9 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "results_df = pd.DataFrame(\n",
-        "    values, columns=metrics, index=pd.Index(algorithms, name=\"Algorithm\")\n",
-        ")\n",
-        "results_df"
+        "results = evaluator.evaluate(top_n_metrics=True)\n",
+        "\n",
+        "results.to_df()"
       ]
     },
     {
@@ -150,7 +131,12 @@
       "outputs": [],
       "source": [
         "samples = evaluator.sample_top_n_recs(uid=85)\n",
-        "samples"
+        "\n",
+        "for algorithm, recs in samples.items():\n",
+        "    print(f\"{algorithm}\")\n",
+        "    movie_names = lens.get_movie_names(recs)\n",
+        "    for movie_name in movie_names:\n",
+        "        print(f\"  {movie_name}\")"
       ]
     }
   ],
