--- a/notebooks/13-Hybrid/HybridTest.ipynb
+++ b/notebooks/13-Hybrid/HybridTest.ipynb
@@ -126,24 +126,6 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Evaluate Algorithms\n",
-        "\n",
-        "Run the evaluation to compare the performance of all algorithms. This will help us understand how the hybrid approach performs compared to its individual components."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 6,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "algorithms, metrics, values = evaluator.evaluate(top_n_metrics=True)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
         "### Evaluation results"
       ]
     },
@@ -153,10 +135,9 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "results_df = pd.DataFrame(\n",
-        "    values, columns=metrics, index=pd.Index(algorithms, name=\"Algorithm\")\n",
-        ")\n",
-        "results_df"
+        "results = evaluator.evaluate(top_n_metrics=True)\n",
+        "\n",
+        "results.to_df()"
       ]
     },
     {
@@ -165,7 +146,9 @@
       "source": [
         "### Sample Recommendations\n",
         "\n",
-        "Generate and display some sample recommendations using the evaluated algorithms. This will help us qualitatively assess the differences between the individual algorithms and the hybrid approach."
+        "Generate and display some sample recommendations using the evaluated algorithms.\n",
+        "\n",
+        "This will help us qualitatively assess the differences between the individual algorithms and the hybrid approach."
       ]
     },
     {
@@ -175,7 +158,12 @@
       "outputs": [],
       "source": [
         "samples = evaluator.sample_top_n_recs(uid=85)\n",
-        "samples"
+        "\n",
+        "for algorithm, recs in samples.items():\n",
+        "    print(f\"{algorithm}\")\n",
+        "    movie_names = lens.get_movie_names(recs)\n",
+        "    for movie_name in movie_names:\n",
+        "        print(f\"  {movie_name}\")"
       ]
     }
   ],
