--- a/notebooks/04-Framework/RecsBakeOff.ipynb
+++ b/notebooks/04-Framework/RecsBakeOff.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -181,55 +181,56 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>SVD</th>\n",
-       "      <td>0.90337</td>\n",
+       "      <td>0.903370</td>\n",
        "      <td>0.697788</td>\n",
        "      <td>0.031297</td>\n",
-       "      <td>0.028316</td>\n",
+       "      <td>0.031297</td>\n",
        "      <td>0.011369</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.955291</td>\n",
        "      <td>0.046182</td>\n",
        "      <td>499.795529</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Random</th>\n",
-       "      <td>1.43594</td>\n",
-       "      <td>1.148223</td>\n",
-       "      <td>0.017884</td>\n",
-       "      <td>0.011923</td>\n",
-       "      <td>0.002692</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.069377</td>\n",
-       "      <td>541.005961</td>\n",
+       "      <td>1.438459</td>\n",
+       "      <td>1.147809</td>\n",
+       "      <td>0.008942</td>\n",
+       "      <td>0.008942</td>\n",
+       "      <td>0.001505</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.071946</td>\n",
+       "      <td>557.836513</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "              RMSE       MAE        HR       cHR      ARHR  Coverage  \\\n",
-       "Algorithm                                                              \n",
-       "SVD        0.90337  0.697788  0.031297  0.028316  0.011369       1.0   \n",
-       "Random     1.43594  1.148223  0.017884  0.011923  0.002692       1.0   \n",
+       "               RMSE       MAE        HR       cHR      ARHR  Coverage  \\\n",
+       "Algorithm                                                               \n",
+       "SVD        0.903370  0.697788  0.031297  0.031297  0.011369  0.955291   \n",
+       "Random     1.438459  1.147809  0.008942  0.008942  0.001505  1.000000   \n",
        "\n",
        "           Diversity     Novelty  \n",
        "Algorithm                         \n",
        "SVD         0.046182  499.795529  \n",
-       "Random      0.069377  541.005961  "
+       "Random      0.071946  557.836513  "
       ]
      },
+     "execution_count": 12,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "results = evaluator.evaluate(top_n_metrics=True)\n",
+    "results = evaluator.evaluate(top_n_metrics=True, coverage_threshold=4.0)\n",
     "\n",
     "results.to_df()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -248,16 +249,16 @@
       "  Graduate, The (1967)\n",
       "  When We Were Kings (1996)\n",
       "Random\n",
-      "  Ed Wood (1994)\n",
-      "  Sirens (1994)\n",
-      "  Happiness (1998)\n",
-      "  Spider-Man 2 (2004)\n",
+      "  Dracula (Bram Stoker's Dracula) (1992)\n",
+      "  Beavis and Butt-Head Do America (1996)\n",
+      "  Blazing Saddles (1974)\n",
+      "  Summer of Sam (1999)\n",
+      "  Stir of Echoes (1999)\n",
+      "  Fight Club (1999)\n",
       "  V for Vendetta (2006)\n",
-      "  Dark Knight, The (2008)\n",
-      "  White Stripes Under Great White Northern Lights, The (2009)\n",
-      "  Birdcage, The (1996)\n",
-      "  Pinocchio (1940)\n",
-      "  Maltese Falcon, The (1941)\n"
+      "  Coneheads (1993)\n",
+      "  Mary Poppins (1964)\n",
+      "  Cheech and Chong's Up in Smoke (1978)\n"
      ]
     }
    ],
