--- a/notebooks/13-Hybrid/HybridTest.ipynb
+++ b/notebooks/13-Hybrid/HybridTest.ipynb
@@ -135,7 +135,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "results = evaluator.evaluate(top_n_metrics=True)\n",
+        "results = evaluator.evaluate(top_n_metrics=True, coverage_threshold=4.0)\n",
         "\n",
         "results.to_df()"
       ]
