--- a/notebooks/09-DeepLearning/AutoRecBakeOff.ipynb
+++ b/notebooks/09-DeepLearning/AutoRecBakeOff.ipynb
@@ -20,7 +20,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -31,10 +31,20 @@
         "\n",
         "import random\n",
         "import numpy as np\n",
-        "import pandas as pd\n",
         "\n",
         "np.random.seed(0)\n",
         "random.seed(0)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# check for GPU\n",
+        "import tensorflow as tf\n",
+        "tf.config.list_physical_devices('GPU')"
       ]
     },
     {
@@ -48,7 +58,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -66,7 +76,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -86,7 +96,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -105,16 +115,18 @@
       "source": [
         "### Evaluate Algorithms\n",
         "\n",
-        "Run the evaluation to compare the performance of all algorithms. We set `minimum_rating=0.0` to include all ratings in the evaluation."
+        "Run the evaluation to compare the performance of all algorithms. \n",
+        "\n",
+        "We set `minimum_rating=0.0` to include all ratings in the evaluation."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
-        "results = evaluator.evaluate(top_n_metrics=True, minimum_rating=0.0)\n",
+        "results = evaluator.evaluate(top_n_metrics=True, minimum_rating=0.0, coverage_threshold=4.0)\n",
         "\n",
         "results.to_df()"
       ]
@@ -146,7 +158,7 @@
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": ".venv",
       "language": "python",
       "name": "python3"
     },
@@ -160,7 +172,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.0"
+      "version": "3.12.10"
     }
   },
   "nbformat": 4,
